--- a/image_repo/templates/image_repo/base.html
+++ b/image_repo/templates/image_repo/base.html
@@ -18,7 +18,7 @@
       flex-direction: row;
       justify-content: center;
     }
-    h2 {color: Teal}
+    h2 {color: Teal;}
     h5 {font-weight: normal;}
     @media (max-width: 300px) {.top {max-width: 250px;}}
     @media (max-width: 500px) {.top {max-width: 300px;}}
